# amigo-api

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements.txt  test-requirements.txt
alembic/: env.py
alembic/versions/: 10696f0a5531_initial_migration.py  6a2c09cdd247_add_is_superuser_column.py  702564f938a7_add_is_admin_column.py  7b47a5b3039b_initial_migration.py  be6e38251015_add_patient_clinician_.py  cf3f24aa178c_initial_migration.py  d0619a0315f7_add_is_admin_column.py
amigo/: appointments.py  billing.py  database.py  main.py  models.py  routers.py  schemas.py  security.py  user.py
amigo/auth/: auth_service.py  dependencies.py  routers.py
tests/: conftest.py  test_appointments.py  test_billing.py  test_models.py  test_schemas.py  test_user.py
